--- a/docs/网站测试说明文档.md
+++ b/docs/网站测试说明文档.md
@@ -8,7 +8,7 @@
 
 ### 访问地址
 - **主网站**: https://pfabot.netlify.app
-- **团队交付页**: https://pfabot.netlify.app/team-delivery *(推荐)*
+- **团队交付页**: http://fuyaolucky.comteam-delivery *(推荐)*
 
 ### 测试账户
 ```
@@ -165,4 +165,4 @@
 **文档更新**: 2024年12月  
 **技术支持**: 开发团队全程支持
 
-> 💡 **提示**: 建议先访问团队交付页面 (https://pfabot.netlify.app/team-delivery) 获取完整的项目信息和测试指导
+> 💡 **提示**: 建议先访问团队交付页面 (http://fuyaolucky.comteam-delivery) 获取完整的项目信息和测试指导
