更新页面中的网址，确保所有链接指向正确的地址，包括主网站、团队交付页和测试地址，以提升信息的准确性和一致性。

--- a/docs/网站测试说明文档.md
+++ b/docs/网站测试说明文档.md
@@ -7,8 +7,8 @@
 ## 🚀 快速开始
 
 ### 访问地址
-- **主网站**: https://pfabot.netlify.app
-- **团队交付页**: http://fuyaolucky.comteam-delivery *(推荐)*
+- **主网站**: http://fuyaolucky.com
+- **团队交付页**: http://fuyaolucky.com/team-delivery *(推荐)*
 
 ### 测试账户
 ```
@@ -165,4 +165,4 @@
 **文档更新**: 2024年12月  
 **技术支持**: 开发团队全程支持
 
-> 💡 **提示**: 建议先访问团队交付页面 (http://fuyaolucky.comteam-delivery) 获取完整的项目信息和测试指导
+> 💡 **提示**: 建议先访问团队交付页面 (http://fuyaolucky.com/team-delivery) 获取完整的项目信息和测试指导
